--- a/src/styles/components/close-modal.css
+++ b/src/styles/components/close-modal.css
@@ -1,3 +1,5 @@
+/* /src/styles/components/close-modal.css */
+
 /*CSS-Only Close Button Styles */
 .css-close-btn {
   color: var(--text-secondary);
