--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,6 @@
 @import './styles/components/summary-cards.css';
 @import './styles/components/data-table.css';
 @import './styles/components/profile-modal.css';
+@import './styles/components/chart.css';
 
 @import './styles/animations/modal-animations.css';
